...
            "value": "Master Games"
          }
        },
        "zh-Hans": {
          "stringUnit": {
            "state": "translated",
            "value": "大师棋谱"
          }
        }
      }
    },
    "demo.sectionPuzzles": {
      "localizations": {
...
            "value": "Study"
          }
        },
        "zh-Hans": {
          "stringUnit": {
            "state": "translated",
            "value": "学棋"
          }
        }
      }
    },
    "theme.classicWood": {
      "localizations": {
...
            "value": "I Know the Rules"
          }
        },
        "zh-Hans": {
          "stringUnit": {
            "state": "translated",
            "value": "已了解"
          }
        }
      }
    },
    "tutorial.illegalMove": {
      "localizations": {
...
